vr-24|Aquib Ahmad|Added auth of token and update swagger ui
