# routes/rewardsroute.js
@@ -1,14 +1,15 @@
 const express = require("express");
 const mongoose = require("mongoose");
 const Router = express.Router();
+const auth=require("../middleware/auth")
 
-const {
-  storeSignup,
-  userLogin,
+// const {
+//   storeSignup,
+//   userLogin,
   
-} = require("../controller/user");
-Router.post("/signup", storeSignup);
-Router.post("/login", userLogin);
+// } = require("../controller/user");
+// Router.post("/signup", storeSignup);
+// Router.post("/login", userLogin);
 
 
 
@@ -19,16 +20,20 @@ const {
   getRewardDetail,
   editReward,
   deleteReward,
-  launchRewards
+  launchRewards,
+  storeSignup,
+  userLogin
 } = require('../controller/rewardscontroller');
 
 // end points for Rewards crud operation
-Router.get("/rewards", getRewards);
-Router.post("/rewards/create", storeReward);
-Router.get("/rewards/:id", getRewardDetail);
-Router.put("/rewards/:id/edit", editReward);
-Router.delete("/rewards/:id", deleteReward);
-Router.put("/rewards/:id/launch",launchRewards);
+Router.get("/rewards",auth,getRewards);
+Router.post("/rewards/create",auth, storeReward);
+Router.get("/rewards/:id", auth, getRewardDetail);
+Router.put("/rewards/:id/edit", auth , editReward);
+Router.delete("/rewards/:id", auth , deleteReward);
+Router.put("/rewards/:id/launch",auth, launchRewards);
+Router.post("/signup",storeSignup),
+Router.post("/login",userLogin);
 
 
 // exporting end points
